--- a/appspec.yml
+++ b/appspec.yml
@@ -5,13 +5,13 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ec2-user/serveryo
+    destination: /home/ec2-user/server
 
-permissions:
-  - object: /
-    pattern: "**"
-    owner: ec2-user
-    group: ec2-user
+# permissions:
+#   - object: /
+#     pattern: "**"
+#     owner: ec2-user
+#     group: ec2-user
 
 hooks:
   BeforeInstall:
