--- a/appspec.yml
+++ b/appspec.yml
@@ -7,11 +7,11 @@ files:
   - source: /
     destination: /home/ec2-user/server
 
-# permissions:
-#   - object: /
-#     pattern: "**"
-#     owner: ec2-user
-#     group: ec2-user
+permissions:
+  - object: /home/ec2-user/server
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
 
 hooks:
   BeforeInstall:
