--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ec2-user/server
+    destination: /home/ec2-user
 
 permissions:
-  - object: /home/ec2-user/server
+  - object: /home/ec2-user
     pattern: "**"
     owner: ec2-user
     group: ec2-user
